apps/matrix/bridges/whatsapp/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: matrix-whatsapp
spec:
  selector:
    matchLabels:
      app: matrix
      component: matrix-whatsapp
  serviceName: matrix-whatsapp
  template:
    metadata:
      labels:
        app: matrix
        component: matrix-whatsapp
    spec:
      containers:
        - name: matrix-whatsapp
          image: dock.mau.dev/mautrix/whatsapp:v0.6.0
          ports:
            - containerPort: 29318
              name: appservice
            - containerPort: 8001
              name: metrics
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - mountPath: /data/logs
              name: logs
            - mountPath: /data/config.yaml
              name: matrix-whatsapp-config
              subPath: config.yaml
            - mountPath: /data/registration.yaml
              name: matrix-whatsapp-registration
              subPath: registration.yaml
      volumes:
        - name: logs
          emptyDir: {}
        - name: matrix-whatsapp-config
          configMap:
            name: matrix-whatsapp-config
        - name: matrix-whatsapp-registration
          configMap:
            name: matrix-whatsapp-registration
