apps/matrix/bridges/whatsapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix-whatsapp
spec:
  ports:
    - port: 29318
      name: appservice
    - port: 8001
      name: metrics
  selector:
    app: matrix-whatsapp
