apps/matrix/bridges/whatsapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-whatsapp
  annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - matrix.hubbe.club
  rules:
    - host: matrix.hubbe.club
      http:
        paths:
        - path: /whatsapp(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: matrix-whatsapp
              port:
                number: 29318
